--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
         <link href="https://fonts.googleapis.com/css2?family=Lato:wght@400;700&display=swap" rel="stylesheet">
         <link href="https://fonts.googleapis.com/css2?family=Castoro+Titling&display=swap" rel="stylesheet">
        
-        <link rel="stylesheet" type="text/css" href="style.production.css">
+        <link rel="stylesheet" type="text/css" href="css/style.production.css">
     </head>
     <body>
         <header class="page-header">
